<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewBeer.viewBeerFragment">
    <data>

        <variable
            name="viewmodel"
            type="com.example.beerslistv6.ui.viewmodel.BeerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.viewEmployee.ViewEmployeeFragment">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/doble_xl_gap"
            android:layout_height="@dimen/doble_xl_gap"
            android:layout_marginTop="@dimen/md_gap"
            android:contentDescription="@string/desciption_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/beer" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap"
            android:layout_marginStart="@dimen/gap"
            android:layout_marginTop="@dimen/xl_gap"
            android:layout_marginEnd="@dimen/gap"
            android:backgroundTint="@color/background_card"
            app:cardCornerRadius="@dimen/gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/l_gap"
                android:layout_marginBottom="@dimen/gap"
                android:orientation="vertical"
                android:padding="@dimen/gap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gap"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/gap"
                        android:layout_weight="1"
                        android:text="@string/name_beer_hint"
                        android:textColor="@color/type_beer"

                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/background"

                        android:textSize="24sp"
                        tools:text="Corona" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gap"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/gap"
                        android:layout_weight="1"
                        android:text="@string/name_beer_type"

                        android:textColor="@color/type_beer"
                        android:textSize="24sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/text_view_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"

                        android:textColor="@color/background"
                        android:textSize="24sp"
                        tools:text="Light large" />
                </LinearLayout>




            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>