<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="@dimen/gap"
                android:text="@string/title_app"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/gap">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="@dimen/sm_gap"
                android:layout_marginTop="@dimen/sm_gap"
                android:backgroundTint="@color/background_card">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/sm_gap"
                    >

                    <ImageView
                        android:id="@+id/image_beer"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_weight="4"
                        android:contentDescription="@string/desciption_photo"
                        app:srcCompat="@drawable/beer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/md_gap"
                        android:layout_marginTop="@dimen/sm_gap"
                        >

                        <TextView
                            android:id="@+id/text_view_nameBeer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Corona"
                            android:textSize="30sp"
                            android:textColor="@color/name_beer"
                            android:paddingBottom="@dimen/sm_gap"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/text_view_typeBeer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Light Lager"
                            android:textColor="@color/type_beer"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_employee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"

            android:backgroundTint="@color/background_card"
            android:layout_marginEnd="@dimen/md_gap"
            android:layout_marginBottom="28dp"
            android:contentDescription="@string/title_add_beer"
            android:src="@drawable/mas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>